fix messages for assigning an Event to a User, fix display for events on user screens, add CSS and Javascript which control the display, change display so that only master events are visible, and when a button is clicked, the whole list of child events is displayed

--- a/Resources/public/css/admin.css
+++ b/Resources/public/css/admin.css
@@ -334,3 +334,7 @@ table#view-presentations form {
 #winner h1, #winner h2 {
 	color: #ffffff;
 }
+
+ul.events, ul.events ul {
+	padding-left: 20px;
+}
